@@ -1,4 +1,5 @@
 -2 test cases from mac os (Naomi Borkowski)
+-check coverage
 
 -new cards with a >=2 grade can end up on the same day on first interactive rep
 replace set_initial_grade by set_initial_grades(cards)? (Gnome, LP bug)
@@ -85,6 +86,9 @@ widget will be centered on the main widget and not the activate cards dialog.
 -implement duplicate checking. Also synonym checking? Add then standard tags.
 -autorun after import, browse with edit, but not sync
 -do review_controller.rebuild_queue, reload counter after clean duplicates?
+
+-if last card had unequal split, learn ahead of schedule message does not go
+ back to 50/50 split.
 
 -migrate science server machine
 
