@@ -1,0 +1,2 @@
+q1	a1
+f 	p	t
