@@ -1,3 +1,4 @@
+-Text files with tab-separated values can now be imported.
 -Cloned card types can now be renamed and deleted.
 -Warn when sister cards are being added to your queue to prevent it from
  running empty.
@@ -46,8 +47,8 @@ Major user-visible changes:
  organise your cards.
 -'Activate cards' is completely revamped and is much more flexible. Also, sets
  of active cards can be now be saved for easier access later.
--Graphical statistics, easily extensible through plugins (first
- implementation by Mike Appleby).
+-Graphical statistics, easily extensible through plugins (first implementation
+ by Mike Appleby).
 -Each individual field in a card can now have its own font, colour, ... which
  can be set through the GUI. Background colour is also configurable per card
  type.
